--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       <label class="form-styles" for="body">Body</label>
       <textarea class="body-input" id="body"></textarea>
       <input class="form-styles form-btn" type="submit" value="Save">
+      <div class="quality-styles">
+      <input class="form-styles quality-btn" type="submit" value="Swill">
+      <input class="form-styles quality-btn" type="submit" value="Plausible">
+      <input class="form-styles quality-btn" type="submit" value="Genius">
+      </div>
     </form>
   </div>
   <section class="card-area">
