Finish recent ideas function

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
       <textarea class="body-input" id="body"></textarea>
       <input class="form-styles form-btn" type="submit" value="Save">
       <div class="quality-styles">
-      <input class="form-styles quality-btn" id="swill-btn" type="submit" value="Swill">
-      <input class="form-styles quality-btn" id="plaus-btn" type="submit" value="Plausible">
-      <input class="form-styles quality-btn" id="genius-btn" type="submit" value="Genius">
+      <input class="form-styles button-corral" id="swill-btn" type="submit" value="Swill">
+      <input class="form-styles button-corral" id="plaus-btn" type="submit" value="Plausible">
+      <input class="form-styles button-corral" id="genius-btn" type="submit" value="Genius">
+      <input class="form-styles button-corral" id="show-more-btn" type="submit" value="Show-More">
       </div>
     </form>
   </div>
