Refactor quality function

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       <input class="form-styles button-corral" id="swill-btn" type="submit" value="Swill">
       <input class="form-styles button-corral" id="plaus-btn" type="submit" value="Plausible">
       <input class="form-styles button-corral" id="genius-btn" type="submit" value="Genius">
-      <input class="form-styles button-corral" id="show-more-btn" type="submit" value="Show-More">
+    </div>
+    <div class="show-more-styles">
+      <input class="form-styles button-corral-1" id="show-more-btn" type="submit" value="Show-More">
       </div>
     </form>
   </div>
